crates/dag-macros/tests/ui/workflow_switch_duplicate_case_key.stderr
error: duplicate switch case key `a`
  --> tests/ui/workflow_switch_duplicate_case_key.rs:39:29
   |
39 |         cases = { "a" => a, "a" => b }
   |                             ^^^
